@@ -12951,9 +12951,25 @@ void Client::Handle_OP_TargetCommand(const EQApplicationPacket *app)
 		if (nt)
 		{
 			SetTarget(nt);
-			if ((nt->IsClient() && !nt->CastToClient()->GetPVP()) ||
-				(nt->IsPet() && nt->GetOwner() && nt->GetOwner()->IsClient() && !nt->GetOwner()->CastToClient()->GetPVP()) ||
-				(nt->IsMerc() && nt->GetOwner() && nt->GetOwner()->IsClient() && !nt->GetOwner()->CastToClient()->GetPVP()))
+			bool inspect_buffs = false;
+			// rank 1 gives you ability to see NPC buffs in target window (SoD+)
+			if (nt->IsNPC()) {
+				if (IsRaidGrouped()) {
+					Raid *raid = GetRaid();
+					if (raid) {
+						uint32 gid = raid->GetGroup(this);
+						if (gid < 12 && raid->GroupCount(gid) > 2)
+							inspect_buffs = raid->GetLeadershipAA(groupAAInspectBuffs, gid);
+					}
+				} else {
+					Group *group = GetGroup();
+					if (group && group->GroupCount() > 2)
+						inspect_buffs = group->GetLeadershipAA(groupAAInspectBuffs);
+				}
+			}
+			if (nt == this || inspect_buffs || (nt->IsClient() && !nt->CastToClient()->GetPVP()) ||
+					(nt->IsPet() && nt->GetOwner() && nt->GetOwner()->IsClient() && !nt->GetOwner()->CastToClient()->GetPVP()) ||
+					(nt->IsMerc() && nt->GetOwner() && nt->GetOwner()->IsClient() && !nt->GetOwner()->CastToClient()->GetPVP()))
 				nt->SendBuffsToClient(this);
 		}
 		else
