@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 10/20/2014 ==
+demonstar55: Inspect Buffs rank 1 will now show NPC buffs in target window (SoD+)
+
 == 10/19/2014 ==
 Uleat: Updated command #peekinv to display item links properly in RoF clients
 demonstar55: Group Mentoring in raids
